snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.module.sha1
a4b5ad3447570b574038efa0701c930b40051189